--- a/package.json
+++ b/package.json
@@ -9,34 +9,22 @@
   },
   "dependencies": {
     "next": "latest",
-    "next-auth": "^4.0.0-beta.5",
+    "next-auth": "^4.0.0-beta.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
     "autoprefixer": "^10.2.6",
-    "eslint": "^8.1.0",
-    "eslint-config-next": "12.0.1",
+    "eslint": "<8.0.0",
+    "eslint-config-next": "^12.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.3.5",
+    "prettier": "^2.4.1",
     "tailwindcss": "^2.2.4",
-    "typescript": "^4.4.4",
-    "@babel/eslint-parser": "^7.15.8",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^6.6.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^23.0.4",
-    "eslint-plugin-jsdoc": "^18.0.1",
-    "eslint-plugin-json": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-no-autofix": "0.0.3",
-    "eslint-plugin-only-warn": "^1.0.1",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "prettier": "^1.15.3"
+    "typescript": "^4.4.4"
   }
 }
