--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "clean": "rm -rf node_modules && rm -rf *.lock && yarn"
   },
   "dependencies": {
-    "next": "latest",
-    "next-auth": "^4.0.0-beta.6",
+    "mongodb": "^4.2.0",
+    "next": "^12.0.4",
+    "next-auth": "4.0.0-beta.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
