--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "^12.0.4",
     "next-auth": "4.0.0-beta.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^2.2.4"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
@@ -25,7 +26,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.3.5",
     "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.4",
     "typescript": "^4.4.4"
   }
 }
